# tine

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  syntax.md  todo.md
crates/cli/: Cargo.toml
crates/core/: Cargo.toml
crates/enum_from_derive/: Cargo.toml
crates/server/: Cargo.toml
crates/transpiler/: Cargo.toml
crates/transpiler/docs/: refs.md
crates/transpiler/src/: lib.rs  main.rs  utils.rs
crates/transpiler/src/bundler/: bundler.rs  loader.rs  mod.rs  transpiler.rs  utils.rs
crates/transpiler/src/bundler/internals/: dom.js  internals.js  mod.rs  signals.js
crates/transpiler/src/codegen/: codegen.rs  composite_literal.rs  dom.rs  items.rs  mod.rs  patterns.rs  sort.rs  utils.rs
crates/transpiler/src/codegen/expressions/: binary.rs  block.rs  calls.rs  dom.rs  ifs.rs  member.rs  mod.rs  unary.rs  utils.rs
crates/transpiler/src/codegen/statements/: assignments.rs  declarations.rs  functions.rs  mod.rs  types.rs  utils.rs
crates/transpiler/src/codegen/statements/type_definitions/: enums.rs  mod.rs  struct_definitions.rs  utils.rs
crates/transpiler/src/codegen/statements/types/: concrete.rs  enums.rs  mod.rs  structs.rs  utils.rs
crates/transpiler/src/codegen/type_declaration/: enums.rs  literal_alias.rs  mod.rs  struct_type.rs  type_declaration.rs
examples/counter/: counter.tine  index.html  style.css
src/: ast.rs  grammar.pest  main.rs  parser.rs  transpiler.rs  type_checker.rs  types.rs  utils.rs
src/analyzer/: graph.rs  parse.rs  (+1 more)
vscode-extension/: .gitignore  .vscodeignore  package-lock.json  package.json  tsconfig.json
(+304 files in other folders)
