[package]
name = "mylang-transpiler"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bitflags = "2.9.0"
ordered-float = "5.0.0"
pest = "2.7"
pest_derive = "2.7"
rand = "0.9.1"
swc_bundler = "31.0.0"
swc_common = "14.0.4"
swc_ecma_ast = "15.0.0"
swc_ecma_codegen = "17.0.2"
swc_ecma_parser = "24.0.1"

[build-dependencies]
pest_generator = "2.7"
