[package]
name = "mylang-transpiler"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
mylang_core = { path = "../core" }
ordered-float = "5.1.0"
rand = "0.9.2"
swc_bundler = "35.0.0"
swc_common = "17.0.0"
swc_ecma_ast = "18.0.0"
swc_ecma_codegen = "20.0.0"
swc_ecma_loader = "17.0.0"
swc_ecma_minifier = "36.0.1"
swc_ecma_parser = "27.0.2"
swc_ecma_transforms = "38.0.0"
swc_ecma_visit = "18.0.0"
